--- a/wt-cp/src/components/Home.css
+++ b/wt-cp/src/components/Home.css
@@ -8,6 +8,24 @@
     color: black;
 }
 
+.bg{
+    padding-top: 5rem;
+    position: absolute;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.mock{
+    background-color: rgb(0, 0, 0, 0.35);
+    padding-top: 5rem;
+    position: absolute;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+}
+
 .home-left{
     width: 50%;
     display: flex;
@@ -16,29 +34,32 @@
     flex-direction: column;
 }
 
-.heading{
+.header{
     font-family: 'Bebas Neue', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 5rem;
+    color: white;
+    text-shadow: 0rem 0rem 0.8rem rgba(0, 150, 200, 0.75);
 }
 
-.sub-heading{
+.sub-header{
     color: rgb(10, 180, 250);
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 2.5rem;
-    text-shadow: 0rem 0rem 0.8rem rgba(0, 150, 200, 0.25);
+    font-size: 2.75rem;
+    text-shadow: 0rem 0rem 0.8rem rgba(0, 150, 200, 0.75);
     margin-bottom: 0.8rem;
 }
 
-.para{
+.home .home-para{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    font-size: 1.25rem;
-    text-shadow: 0rem 0rem 0.8rem rgba(0, 150, 200, 0.25);
+    font-size: 1.5rem;
+    text-shadow: 0rem 0rem 0.8rem rgba(0, 150, 200, 0.75);
+    color: white;
 }
 
 .test{
-    width: 10rem;
+    width: 11rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -53,6 +74,12 @@
     border-radius: 0.2rem;
     padding: 0.5rem 0.75rem;
     box-shadow: 0rem 0rem 0.8rem rgba(0, 150, 200, 0.75);
+    cursor: pointer;
+}
+
+.test:hover {
+    background-color: rgb(10, 170, 250);
+    box-shadow: 0rem 0rem 1rem rgba(0, 150, 220, 0.95);
 }
 
 .testlogo{
