--- a/wt-cp/src/components/Navbar.css
+++ b/wt-cp/src/components/Navbar.css
@@ -4,7 +4,7 @@
 nav{
     height: 5rem;
     width: 100vw;
-    background-color: black;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -16,12 +16,13 @@ nav{
     z-index: 5;
 }
 
-.nav-left{
+.nav-left a{
     margin-left: 4rem;
     padding: 1rem;
-    color: white;
+    /* color: white; */
     cursor: pointer;
     font-size: 1.75rem;
+    font-weight: 600;
 }
 
 .nav-left:hover{
@@ -46,8 +47,9 @@ li{
 a{
     text-decoration: none;
     font-size: 1.5rem;
-    color: white;
+    color: black;
     cursor: pointer;
+    font-weight: 600;
 }
 
 a:hover{
