--- a/wt-cp/src/components/Tipspage.css
+++ b/wt-cp/src/components/Tipspage.css
@@ -1,5 +1,5 @@
 .tipspage{
-    padding: 5rem;
+    padding: 7rem 5rem 5rem 5rem;
     padding-bottom: 2rem;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,6 @@
 }
 
 .tipspage .heading{
-    margin-top: 2rem;
     text-align: center;
 }
 
